<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/gray">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/tab"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:background="@drawable/bg_purple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="180dp"
            android:fontFamily="@font/msemi"
            android:text="@string/h1_idemo_vozom"
            android:textColor="#FFF"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="200dp"
            android:fontFamily="@font/mlight"
            android:text="@string/h3_vodic"
            android:textColor="#FFF"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <AutoCompleteTextView
            android:id="@+id/inputOd"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:background="@drawable/bg_autocomplete"
            android:hint="@string/odakle_idete"
            android:padding="6dp"
            android:textColor="#FFF"
            android:textColorHint="#80FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <AutoCompleteTextView
            android:id="@+id/inputDo"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/bg_autocomplete"
            android:hint="@string/dokle_idete"
            android:padding="6dp"
            android:textColor="#FFF"
            android:textColorHint="#80FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputOd" />

        <ImageView
            android:id="@+id/imageFrom"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_marginStart="37dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/from_location"
            android:src="@drawable/current_location"
            app:layout_constraintEnd_toStartOf="@+id/inputOd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageTo"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_marginStart="37dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/to_location"
            android:src="@drawable/location"
            app:layout_constraintEnd_toStartOf="@+id/inputDo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageSwitch"
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="40dp"
            android:contentDescription="@string/switch_stations"
            android:src="@drawable/sort"
            app:layout_constraintBottom_toBottomOf="@+id/tab"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tab" />

        <Button
            android:id="@+id/buttonFind"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginTop="245dp"
            android:background="@drawable/big_btn"
            android:fontFamily="@font/msemi"
            android:text="@string/find_text"
            android:textAllCaps="false"
            android:textColor="#FFF"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/buttonDate"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/bg_dateandtime"
            android:fontFamily="@font/msemi"
            android:text="12.10.2020."
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toTopOf="@+id/buttonFind"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.158"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputDo"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/calendar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_dateandtime_icon"
            android:padding="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/tab"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/buttonDate"
            app:layout_constraintTop_toBottomOf="@+id/inputDo"
            app:layout_constraintVertical_bias="0"
            app:srcCompat="@drawable/calendar_white" />

        <Button
            android:id="@+id/buttonHours"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/bg_dateandtime"
            android:fontFamily="@font/msemi"
            android:text="14:40"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toTopOf="@+id/buttonFind"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.158"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputDo"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/hours"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/bg_dateandtime_icon"
            android:padding="12dp"
            app:layout_constraintBottom_toBottomOf="@+id/tab"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonHours"
            app:layout_constraintTop_toBottomOf="@+id/inputDo"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/clock_white" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutFavorite"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bg_favorite"
            android:elevation="1dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonFind"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:id="@+id/icon_lamp"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_favorite_icon"
                android:contentDescription="@string/icon_for_favorite_section"
                android:padding="6dp"
                android:src="@drawable/lamp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/favoriteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/omeljene_destinacije"
                android:textColor="#737373"
                app:layout_constraintStart_toEndOf="@+id/icon_lamp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/labelDescFavorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="2dp"
                android:text="@string/favorite_desc"
                android:textSize="12sp"
                android:textColor="#737373"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/icon_lamp" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="60dp"
                android:background="#737373"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iconFrom"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider"
                app:srcCompat="@drawable/current_purple" />

            <TextView
                android:id="@+id/labelFromFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="14dp"
                android:text="Beograd Centar"
                android:textColor="#737373"
                app:layout_constraintStart_toEndOf="@+id/iconFrom"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <ImageView
                android:id="@+id/iconTo"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iconFrom"
                app:srcCompat="@drawable/location_purple" />

            <TextView
                android:id="@+id/labelToFavorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:text="Šid"
                android:textColor="#737373"
                app:layout_constraintStart_toEndOf="@+id/iconTo"
                app:layout_constraintTop_toBottomOf="@+id/labelFromFavorite" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelToFavorite" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>